pkgdata_SCRIPTS= functions.bash


# rclm2 base scripts
rclm_scriptdir=$(pkgdatadir)/script
rclm_script_SCRIPTS= \
	script/init \
	script/init_scheduler \
	script/start \
	script/stop


# rclm2 sample type scripts
rclmtype_sampledir=$(pkgdatadir)/types/sample
rclmtype_sample_SCRIPTS= \
	types/sample/clearup \
	types/sample/record \
	types/sample/setup \
	types/sample/start \
	types/sample/stop

# rclm2 SSIL2D type scripts
rclmtype_ssil2ddir=$(pkgdatadir)/types/SSIL2D
rclmtype_ssil2d_SCRIPTS= \
	types/SSIL2D/clearup \
	types/SSIL2D/record \
	types/SSIL2D/setup \
	types/SSIL2D/start \
	types/SSIL2D/stop

# rclm2 competition type scripts
rclmtype_competitiondir=$(pkgdatadir)/types/competition
rclmtype_competition_SCRIPTS= \
	types/competition/clearup \
	types/competition/record \
	types/competition/setup \
	types/competition/start \
	types/competition/stop

# rclm2 robocup2007_2D type scripts
rclmtype_robocup2007_2Ddir=$(pkgdatadir)/types/robocup2007_2D
rclmtype_robocup2007_2D_SCRIPTS= \
	types/robocup2007_2D/clearup \
	types/robocup2007_2D/record \
	types/robocup2007_2D/setup \
	types/robocup2007_2D/start \
	types/robocup2007_2D/stop

# rclm2 jopen2008_2D type scripts
rclmtype_jopen2008_2Ddir=$(pkgdatadir)/types/jopen2008_2D
rclmtype_jopen2008_2D_SCRIPTS= \
	types/jopen2008_2D/clearup \
	types/jopen2008_2D/record \
	types/jopen2008_2D/setup \
	types/jopen2008_2D/start \
	types/jopen2008_2D/stop

# rclm2 jopen2008_2D tournament type scripts
rclmtype_jopen2008_2D_Tdir=$(pkgdatadir)/types/jopen2008_2D-T
rclmtype_jopen2008_2D_T_SCRIPTS= \
	types/jopen2008_2D-T/clearup \
	types/jopen2008_2D-T/record \
	types/jopen2008_2D-T/setup \
	types/jopen2008_2D-T/start \
	types/jopen2008_2D-T/stop

rclmtype_2D_RoundRobindir=$(pkgdatadir)/types/2D_RoundRobin
rclmtype_2D_RoundRobin_SCRIPTS= \
	types/2D_RoundRobin/clearup \
	types/2D_RoundRobin/record \
	types/2D_RoundRobin/setup \
	types/2D_RoundRobin/start \
	types/2D_RoundRobin/stop

rclmtype_2D_Tournamentdir=$(pkgdatadir)/types/2D_Tournament
rclmtype_2D_Tournament_SCRIPTS= \
	types/2D_Tournament/clearup \
	types/2D_Tournament/record \
	types/2D_Tournament/setup \
	types/2D_Tournament/start \
	types/2D_Tournament/stop

rclmtype_3DSparkdir=$(pkgdatadir)/types/3DSpark
rclmtype_3DSpark_SCRIPTS= \
	types/3DSpark/local_func.bash \
	types/3DSpark/clearup \
	types/3DSpark/record \
	types/3DSpark/setup \
	types/3DSpark/start \
	types/3DSpark/stop

# rclm2 roundrobin scheduler scripts
rclmschedulers_roundrobindir=$(pkgdatadir)/schedulers/roundrobin
rclmschedulers_roundrobin_SCRIPTS= \
	schedulers/roundrobin/init \
	schedulers/roundrobin/update

# rclm2 tournament scheduler scripts
rclmschedulers_tournamentdir=$(pkgdatadir)/schedulers/tournament
rclmschedulers_tournament_SCRIPTS= \
	schedulers/tournament/init \
	schedulers/tournament/update \
	schedulers/tournament/script

EXTRA_DIST = \
	functions.bash \
	script/init \
	script/init_scheduler \
	script/start \
	script/stop \
	types/sample/clearup \
	types/sample/record \
	types/sample/setup \
	types/sample/start \
	types/sample/stop \
	types/SSIL2D/clearup \
	types/SSIL2D/record \
	types/SSIL2D/setup \
	types/SSIL2D/start \
	types/SSIL2D/stop \
	types/competition/clearup \
	types/competition/record \
	types/competition/setup \
	types/competition/start \
	types/competition/stop \
	types/robocup2007_2D/clearup \
	types/robocup2007_2D/record \
	types/robocup2007_2D/setup \
	types/robocup2007_2D/start \
	types/robocup2007_2D/stop \
	types/jopen2008_2D/clearup \
	types/jopen2008_2D/record \
	types/jopen2008_2D/setup \
	types/jopen2008_2D/start \
	types/jopen2008_2D/stop \
	types/jopen2008_2D-T/clearup \
	types/jopen2008_2D-T/record \
	types/jopen2008_2D-T/setup \
	types/jopen2008_2D-T/start \
	types/jopen2008_2D-T/stop \
	types/2D_RoundRobin/clearup \
	types/2D_RoundRobin/record \
	types/2D_RoundRobin/setup \
	types/2D_RoundRobin/start \
	types/2D_RoundRobin/stop \
	types/2D_Tournament/clearup \
	types/2D_Tournament/record \
	types/2D_Tournament/setup \
	types/2D_Tournament/start \
	types/2D_Tournament/stop \
	types/3DSpark/local_func.bash \
	types/3DSpark/clearup \
	types/3DSpark/record \
	types/3DSpark/setup \
	types/3DSpark/start \
	types/3DSpark/stop \
	schedulers/roundrobin/init \
	schedulers/roundrobin/update \
	schedulers/tournament/init \
	schedulers/tournament/update \
	schedulers/tournament/script
